Tema completa, cu toate testele trecute, fara README